--- a/src/main/resources/templates/essaim/essaimCadreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCadreLotForm.html
@@ -40,7 +40,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
-					<th:block th:text="' ' + #{cadreLot} + ' ' + ${essaimsNoms}">
+					<th:block th:text="#{sep} + #{cadreLot} + ' ' + ${essaimsNoms}">
 				</h1>
 			</div>
 		</div>
