--- a/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
@@ -37,7 +37,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
-					<th:block th:text="' ' + #{commentaireLot} + ' ' + ${essaimsNoms}">
+					<th:block th:text="#{sep} + #{commentaireLot} + ' ' + ${essaimsNoms}">
 				</h1>
 			</div>
 		</div>
