--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -32,7 +32,7 @@
 			<div class="col text-center">
 				<h1 class="item">
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
-					<th:block th:text="' '+#{PoidsMielAnneeKg}"></th:block>
+					<th:block th:text="#{sep}+#{PoidsMielAnneeKg}"></th:block>
 					&nbsp; <a th:href="@{#{urldoc}+'3836_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
 						aria-hidden="true"></a>
 				</h1>
