--- a/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
+++ b/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
@@ -37,7 +37,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/ruche/liste'}" th:text="#{Ruches}"></a>
-					<th:block th:text="' ' + #{commentaireLot} + ' ' + ${ruchesNoms}">
+					<th:block th:text="#{sep} + #{commentaireLot} + ' ' + ${ruchesNoms}">
 				</h1>
 			</div>
 		</div>
