--- a/src/main/resources/templates/rucher/rucherPoidsForm.html
+++ b/src/main/resources/templates/rucher/rucherPoidsForm.html
@@ -62,7 +62,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
-					<th:block th:text="#{pesee} + ' '"></th:block>
+					<th:block th:text="#{sep}+#{pesee}"></th:block>
 				</h1>
 			</div>
 		</div>
