--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -41,7 +41,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
-					<th:block th:text="' '+#{carteOsm}"></th:block>
+					<th:block th:text="#{sep}+#{carteOsm}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
