--- a/src/main/resources/templates/essaim/essaimEssaimerForm.html
+++ b/src/main/resources/templates/essaim/essaimEssaimerForm.html
@@ -45,8 +45,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{Essaimage}+' '"></th:block>
 					<a th:href="@{'/essaim/'+${essaimId}}" th:text="#{essaim}+' '+${essaim.nom}"></a>
+					<th:block th:text="#{sep} + #{Essaimage}"></th:block>
 					<th:block th:text="#{ruche} + ' ' + ${ruche.nom}"></th:block>
 				</h1>
 			</div>
