--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -51,8 +51,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{graphedescendance} + ' '"></th:block>
 					<a th:href="@{'/essaim/'+${essaimId}}" th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
+					<th:block th:text="#{sep} + #{graphedescendance}"></th:block>
 				</h1>
 			</div>
 		</div>
