--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -40,7 +40,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
-					<th:block th:text="' '+#{Production}"></th:block>
+					<th:block th:text="#{sep}+#{Production}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
