--- a/src/main/resources/templates/essaim/essaimSucreForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreForm.html
@@ -39,9 +39,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{ajoutSucre} + ' '"></th:block>
 					<a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
 						th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
+					<th:block th:text="#{sep}+#{ajoutSucre}"></th:block>
 				</h1>
 				<th:block th:if="${EveESSAIMSUCRE}">
 					<a th:href="@{'/evenement/'+${EveESSAIMSUCRE.id}}"
