--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -35,9 +35,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{traitement} + ' '"></th:block>
 					<a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
 						th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
+					<th:block th:text="#{sep}+#{traitement}"></th:block>
 				</h1>
 				<th:block th:if="${EveESSAIMTRAITEMENT}">
 					<a th:href="@{'/evenement/'+${EveESSAIMTRAITEMENT.id}}"
