--- a/src/main/resources/templates/hausse/hausseCommentaireForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireForm.html
@@ -36,9 +36,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{commentaire} + ' '"></th:block>
 					<a th:href="@{'/hausse/' + ${evenement.hausse?.id}}"
 						th:text="#{hausse} + ' ' + ${evenement.hausse?.nom}"></a>
+					<th:block th:text="#{sep}+#{commentaire}"></th:block>
 				</h1>
 			</div>
 		</div>
