--- a/src/main/resources/templates/hausse/hausseRemplissageForm.html
+++ b/src/main/resources/templates/hausse/hausseRemplissageForm.html
@@ -40,9 +40,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{remplissage} + ' '"></th:block>
 					<a th:href="@{'/hausse/' + ${evenement.hausse?.id}}"
 						th:text="#{hausse} + ' ' + ${evenement.hausse?.nom}"></a>
+					<th:block th:text="#{sep}+#{remplissage}"></th:block>
 				</h1>
 				<th:block th:text="${valeurHAUSSEREMPLISSAGE}?
 					${valeurHAUSSEREMPLISSAGE}+'% le '+${#temporals.format(dateHAUSSEREMPLISSAGE, 'dd/MM/yyyy')}:''">
