--- a/src/main/resources/templates/recolte/recoltesStat.html
+++ b/src/main/resources/templates/recolte/recoltesStat.html
@@ -24,9 +24,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{productionessaim} + ' '"></th:block>
 					<a th:href="@{'/recolte/'+${recolte.id}}"
 						th:text="#{recolte} + ' ' + ${#temporals.format(recolte.date, 'yy/MM/dd HH:mm')}"></a>
+					<th:block th:text="#{sep}+#{productionessaim}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
