--- a/src/main/resources/templates/recolte/recoltesStatEssaim.html
+++ b/src/main/resources/templates/recolte/recoltesStatEssaim.html
@@ -65,8 +65,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{ProductionEssaims}"></th:block>
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
+					<th:block th:text="#{sep}+#{ProductionEssaims}"></th:block>
 				</h1>
 			</div>
 
