--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -39,9 +39,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{nbCadres} + ' '"></th:block>
 					<a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
 						th:text="#{essaim} + ' ' + ${evenement.essaim?.nom}"></a>
+					<th:block th:text="#{sep}+#{nbCadres}"></th:block>
 				</h1>
 				<th:block th:if="${EveRUCHECADRE}">
 					<a th:href="@{'/evenement/'+${EveRUCHECADRE.id}}"
