--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -47,8 +47,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{changerDeRucher} + ' '"></th:block>
 					<a th:href="@{'/ruche/'+${rucheId}}" th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<th:block th:text="#{sep}+#{changerDeRucher}"></th:block>
 				</h1>
 				<p th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
 				</p>
