--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -51,8 +51,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{ajoutderuches}+' '"></th:block>
 					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="#{sep}+#{ajoutderuches}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
