--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -36,9 +36,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{commentaire} + ' '"></th:block>
 					<a th:href="@{'/rucher/' + ${evenement.rucher?.id}}"
 						th:text="#{rucher} + ' ' + ${evenement.rucher?.nom}"></a>
+					<th:block th:text="#{sep}+#{commentaire}"></th:block>
 				</h1>
 			</div>
 		</div>
