--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -74,8 +74,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="' '+#{carteIgn}"></th:block>
 					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="#{sep}+#{carteIgn}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
