--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -42,9 +42,9 @@ th {
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{meteo}+' '"></th:block>
 					<a th:href="@{'/rucher/'+${rucher.id}}"
 						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="#{sep}+#{meteo}"></th:block>
 				</h1>
 			</div>
 		</div>
