--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -29,7 +29,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
-					<th:block th:text="' '+#{carteGg}"></th:block>
+					<th:block th:text="#{sep}+#{carteGg}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
