--- a/src/main/resources/templates/rucher/ruchersListeIgn.html
+++ b/src/main/resources/templates/rucher/ruchersListeIgn.html
@@ -46,7 +46,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
-					<th:block th:text="' '+#{carteIgn}"></th:block>
+					<th:block th:text="#{sep}+#{carteIgn}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
