--- a/src/main/resources/templates/recolte/recoltesStat.html
+++ b/src/main/resources/templates/recolte/recoltesStat.html
@@ -8,10 +8,12 @@
 	<script th:replace="~{include :: d3-interpolate}"></script>
 	<script th:replace="~{include :: d3-scale-chromatic}"></script>
 	<script th:inline="javascript">
-		/* exported	d3, Chart, poidsmiel, nomsessaims, poidsTotal */
+		/* exported	d3, Chart, poidsmiel, nomsessaims, poidsTotal, urlRecolteStat, rucherId */
 		const poidsmiel = /*[[${poids}]]*/ null;
 		const nomsessaims = /*[[${noms}]]*/ null;
 		const poidsTotal = /*[[${poidsTotal}]]*/ null;
+		const urlRecolteStat  = /*[[@{'/recolte/statistiques/'+${recolte.id}}]]*/ null;
+		const rucherId = /*[[${rucherId}]]*/ null;
 	</script>
 </head>
 
@@ -33,6 +35,13 @@
 				<span th:text="#{poidsMielHausses} + ' ' + 
 			  	${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')} + 'kg'">
 				</span>
+			</div>
+			<div th:if="${#lists.size(ruchers) > 1}" class="col-6">
+				<select class="form-control" id="rucher" name="rucher">
+					<option value="null" th:text="#{TousRuchers}"></option>
+					<option th:each="rucher : ${ruchers}"
+						th:value="${rucher.id}" th:text="${rucher.nom}"></option>
+				</select>
 			</div>
 		</div>
 	</div>
