--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -71,7 +71,7 @@
 				</th:block>
 				&nbsp; <a th:href="@{'/essaim/historique/'+${essaim.id}}" class="bi-calendar-check"
 					th:title="#{histoRucheRucher}" aria-hidden="true"></a>
-				&nbsp; <a th:href="@{'/essaim/poids/'+${essaim.id}}" class="bi-graph-up" th:title="#{poidsVide}"
+				&nbsp; <a th:href="@{'/essaim/poids/'+${essaim.id}}" class="bi-graph-up" th:title="#{evenements}"
 					aria-hidden="true"></a>
 				&nbsp; <a th:href="@{'/essaim/statistiques/'+${essaim.id}}" class="bi-table"
 					th:title="#{statistiquesproduction}" aria-hidden="true"></a>
