--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -4,7 +4,7 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
-		/* exported google, exportGpx, exportKml,
+		/* exported google, exportGpx, exportKml, essaims,
 		rucheParcours:writable, distParcours:writable, rucher, rucherMapZoom, longitudeCentre, latitudeCentre,
 		  rayonsButinage, distButinage, urlruches, nomHausses, essaimtxt, pasdessaimtxt,
 		  ruchetxt, haussestxt, pasdehaussetxt, ruches, ruchestxt, distancedeparcourstxt,
@@ -25,6 +25,7 @@
 		const haussestxt = /*[[#{Hausses}]]*/ null;
 		const pasdehaussetxt = /*[[#{Pasdehausse}]]*/ null;
 		const ruches = /*[[${ruches}]]*/ null;
+		const essaims = /*[[${essaims}]]*/ null;
 		const ruchestxt = /*[[#{ruches}]]*/ null;
 		const distancedeparcourstxt = /*[[#{distancedeparcours}]]*/ null;
 		const entreetxt = /*[[#{Entree}]]*/ null;
