.navbar-toggler-icon 1em, test.hml table-responsive

--- a/src/main/resources/static/css/ruches-2.css
+++ b/src/main/resources/static/css/ruches-2.css
@@ -5,6 +5,11 @@ footer {
 	line-height: 0.5em;
 }
 
+.navbar-toggler-icon {
+	width: 1em !important;
+	height: 1em !important;
+}
+
 .accordion-button {
 	padding: 7px 7px !important;
 }
