--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -34,7 +34,7 @@
 					</button>
 				</h1>
 				<div id="collapse0" class="accordion-collapse collapse" data-bs-parent="#accordion">
-					<div class="accordion-body">
+					<div class="accordion-body table-responsive">
 						<table class="table table-sm table-bordered table-striped">
 							<thead>
 								<tr>
@@ -105,7 +105,7 @@
 					</button>
 				</h1>
 				<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordion">
-					<div class="accordion-body">
+					<div class="accordion-body table-responsive">
 						<table class="table table-sm table-bordered table-striped">
 							<thead>
 								<tr>
@@ -156,7 +156,7 @@
 					</button>
 				</h1>
 				<div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordion">
-					<div class="accordion-body">
+					<div class="accordion-body table-responsive">
 						<table class="table table-sm table-bordered table-striped">
 							<thead>
 								<tr>
