footer css margin pour supprimer <br/>

--- a/src/main/resources/static/css/ruches-2.css
+++ b/src/main/resources/static/css/ruches-2.css
@@ -1,4 +1,7 @@
 footer {
+
+	margin-top: 20px;
+	
 	padding-top: 0.2em;
 	padding-left: 0.4em;
 	font-size: 0.8em;
@@ -16,7 +19,7 @@ footer {
 }
 
 body {
- padding-top: 40px; 
+ padding-top: 42px; 
 }
 
 .accordion-button {
